--- a/assignment1/assignment1.html
+++ b/assignment1/assignment1.html
@@ -10,6 +10,7 @@
 		<div role="banner">
 			<div role="heading" aria-level="1">ARIA Assignment 1</div>
 			<p>Your assignment is to replace the ARIA, where possible, on this page to HTML.</p>
+			<p><strong>Note</strong>:  All text was taken from <a href="http://fillerama.io/" target="_blank" rel="noopener noreferrer">Fillerama</a>.  Assume the semantics are correct;  ie: if it's marked up as a heading, it's a heading.  If it's marked up as a list, it's a list.  Don't fix the semantics.  Just change from ARIA to HTML.</p>
 		</div>
 		<div role="main">
 			<div role="document">
@@ -26,10 +27,10 @@
 	
 				<div role="heading" aria-level="3">What's Spanish for "I know you speak English?"</div>
 				<p>That's what it said on 'Ask Jeeves.' Well, what do you expect, mother? Michael! We just call it a sausage. No! I was ashamed to be SEEN with you. I like being with you.</p>
-				<div role="list">
-					<div role="listitem">There's so many poorly chosen words in that sentence.</div>
-					<div role="listitem">Now, when you do this without getting punched in the chest, you'll have more fun.</div>
-					<div role="listitem">Say goodbye to these, because it's the last time!</div>
+				<div role="list" class="counter">
+					<div role="listitem" aria-setsize="3" aria-posinset="1">There's so many poorly chosen words in that sentence.</div>
+					<div role="listitem" aria-setsize="3" aria-posinset="2">Now, when you do this without getting punched in the chest, you'll have more fun.</div>
+					<div role="listitem" aria-setsize="3" aria-posinset="3">Say goodbye to these, because it's the last time!</div>
 				</div>
 
 				<p>There's so many poorly chosen words in that sentence. I don't criticize you! And if you're worried about criticism, sometimes a diet is the best defense. I've opened a door here that I regret. Across from where?</p>
