Added the homework index.html page, and added more to the README.

--- a/assignment3/assignment3.html
+++ b/assignment3/assignment3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -24,10 +24,11 @@
 				</ul>
 				<div class="panels">
 					<div id="adTabPanel" class="tabPanel">
-						<h2>I'm afraid I just blue myself.</h2>
+						<h2 id="adh2">Arrested Development Filler</h2>
+						<h3>I'm afraid I just blue myself.</h3>
 						<p>I'm half machine. I'm a monster. Well, what do you expect, mother? What's Spanish for "I know you speak English?" Marry me.</p>
 						<p>Across from where? I hear the jury's still out on science. <strong> It's called 'taking advantage.</strong> <em>' It's what gets you ahead in life.</em> Say goodbye to these, because it's the last time!</p>
-						<h2>As you may or may not know, Lindsay and I have hit a bit of a rough patch.</h2>
+						<h3>As you may or may not know, Lindsay and I have hit a bit of a rough patch.</h3>
 						<p>Army had half a day. That's what it said on 'Ask Jeeves.' That's what it said on 'Ask Jeeves.' Guy's a pro. I've opened a door here that I regret. I've opened a door here that I regret.</p>
 						<ol>
 							<li>Oh, you're gonna be in a coma, all right.</li>
@@ -44,10 +45,11 @@
 						</ul>
 					</div>
 					<div id="drWTabPanel" class="hidden tabPanel">
-					<h2>They're not aliens, they're Earth…liens!</h2>
+						<h2 id="drwh2">Doctor Who Filler</h2>
+						<h3>They're not aliens, they're Earth…liens!</h3>
 						<p>It's a fez. I wear a fez now. Fezes are cool. I am the Doctor, and you are the Daleks! Stop talking, brain thinking. Hush. You've swallowed a planet! Aw, you're all Mr. Grumpy Face today.</p>
 						<p>I am the Doctor, and you are the Daleks! I'm the Doctor, I'm worse than everyone's aunt. *catches himself* And that is not how I'm introducing myself. You hate me; you want to kill me! <strong> Well, go on!</strong> <em> Kill me!</em> KILL ME!</p>
-						<h2>You know when grown-ups tell you 'everything's going to be fine' and you think they're probably lying to make you feel better?</h2>
+						<h3>You know when grown-ups tell you 'everything's going to be fine' and you think they're probably lying to make you feel better?</h3>
 						<p>Father Christmas. Santa Claus. Or as I've always known him: Jeff. Aw, you're all Mr. Grumpy Face today. I'm the Doctor, I'm worse than everyone's aunt. *catches himself* And that is not how I'm introducing myself.</p>
 						<ol>
 							<li>Stop talking, brain thinking. Hush.</li><li>You know how I sometimes have really brilliant ideas?</li><li>*Insistently* Bow ties are cool! Come on Amy, I'm a normal bloke, tell me what normal blokes do!</li>
@@ -61,7 +63,8 @@
 						</ul>
 					</div>
 					<div id="futuramaTabPanel" class="hidden tabPanel">
-						<h2>Daddy Bender, we're hungry.</h2>
+					<h2 id="futh2">Futurama Filler</h2>
+						<h3>Daddy Bender, we're hungry.</h3>
 						<p>I just want to talk. It has nothing to do with mating. Fry, that doesn't make sense. Oh sure! Blame the wizards! Calculon is gonna kill us and it's all everybody else's fault! Eeeee! Now say "nuclear wessels"!</p>
 						<p>Bender?! You stole the atom. No! I want to live! There are still too many things I don't own! I just want to talk. It has nothing to do with mating. Fry, that doesn't make sense. <strong> Bender, hurry!</strong> <em> This fuel's expensive!</em> Also, we're dying!</p>
 						<h2>Is today's hectic lifestyle making you tense and impatient?</h2>
