--- a/assignment3/assignment3.html
+++ b/assignment3/assignment3.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<title>ARIA Assignment 3</title>
-		<link rel="Stylesheet" href="assignment3.css" type="text/css">
-	</head>
-	<body>
-		<header>
-			<h1>ARIA Assignment 3</h1>
-			<h2>What to do:</h2>
-			<p>Add the appropriate ARIA to make this tabbed interface accessible.</p>
-		</header>
-		<main>
-			<h2>Tabbed Interface</h2>
-			<p>All text here is from <a href="http://fillerama.io/" target="_blank" rel="noopener noreferrer">Fillerama</a>:</p>
-	
-			<div class="tabHolder">
-				<ul class="tabList">
-					<li class="selectedTab"><button id="adTabBtn" class="tabBtn">Arrested Development</button></li>
-					<li><button id="drWTabBtn" class="tabBtn" tabindex="-1">Doctor Who</button></li>
-					<li><button id="futuramaTabBtn" class="tabBtn" tabindex="-1">Futurama</button></li>
-				</ul>
-				<div class="panels">
-					<div id="adTabPanel" class="tabPanel">
-						<h2 id="adh2">Arrested Development Filler</h2>
-						<h3>I'm afraid I just blue myself.</h3>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>ARIA Assignment 3</title>
+    <link rel="Stylesheet" href="assignment3.css" type="text/css">
+</head>
+<body>
+<header>
+    <h1>ARIA Assignment 3</h1>
+    <h2>What to do:</h2>
+    <p>Add the appropriate ARIA to make this tabbed interface accessible.</p>
+</header>
+<main>
+    <h2>Tabbed Interface</h2>
+    <p>All text here is from <a href="http://fillerama.io/" target="_blank" rel="noopener noreferrer">Fillerama</a>:</p>
+
+    <div class="tabHolder">
+        <ul class="tabList" role="tablist">
+            <li class="selectedTab"><button id="adTabBtn" class="tabBtn" role="tab" aria-selected="true" aria-controls="adTabPanel">Arrested Development</button></li>
+            <li><button id="drWTabBtn" class="tabBtn" role="tab" aria-selected="false" aria-controls="drWTabPanel">Doctor Who</button></li>
+            <li><button id="futuramaTabBtn" class="tabBtn" role="tab" aria-selected="false" aria-controls="futuramaTabPanel">Futurama</button></li>
+        </ul>
+        <div class="panels">
+            <div id="adTabPanel" class="tabPanel" role="tabpanel" aria-labelledby="adTabBtn" aria-hidden="false">
+                <h2 id="adh2">Arrested Development Filler</h2>
+ 	<h3>I'm afraid I just blue myself.</h3>
 						<p>I'm half machine. I'm a monster. Well, what do you expect, mother? What's Spanish for "I know you speak English?" Marry me.</p>
 						<p>Across from where? I hear the jury's still out on science. <strong> It's called 'taking advantage.</strong> <em>' It's what gets you ahead in life.</em> Say goodbye to these, because it's the last time!</p>
 						<h3>As you may or may not know, Lindsay and I have hit a bit of a rough patch.</h3>
@@ -43,9 +43,9 @@
 							<li>I care deeply for nature.</li>
 							<li>Get me a vodka rocks. And a piece of toast.</li>
 						</ul>
-					</div>
-					<div id="drWTabPanel" class="hidden tabPanel">
-						<h2 id="drwh2">Doctor Who Filler</h2>
+            </div>
+            <div id="drWTabPanel" class="hidden tabPanel" role="tabpanel" aria-labelledby="drWTabBtn" aria-hidden="true">
+                <h2 id="drwh2">Doctor Who Filler</h2>
 						<h3>They're not aliens, they're Earth…liens!</h3>
 						<p>It's a fez. I wear a fez now. Fezes are cool. I am the Doctor, and you are the Daleks! Stop talking, brain thinking. Hush. You've swallowed a planet! Aw, you're all Mr. Grumpy Face today.</p>
 						<p>I am the Doctor, and you are the Daleks! I'm the Doctor, I'm worse than everyone's aunt. *catches himself* And that is not how I'm introducing myself. You hate me; you want to kill me! <strong> Well, go on!</strong> <em> Kill me!</em> KILL ME!</p>
@@ -61,9 +61,9 @@
     							<li>It's a fez. I wear a fez now. Fezes are cool.</li>
     							<li>Annihilate? No. No violence. I won't stand for it. Not now, not ever, do you understand me?! I'm the Doctor, the Oncoming Storm - and you basically meant beat them in a football match, didn't you?</li>
 						</ul>
-					</div>
-					<div id="futuramaTabPanel" class="hidden tabPanel">
-					<h2 id="futh2">Futurama Filler</h2>
+            </div>
+            <div id="futuramaTabPanel" class="hidden tabPanel" role="tabpanel" aria-labelledby="futuramaTabBtn" aria-hidden="true">
+                <h2 id="futh2">Futurama Filler</h2>
 						<h3>Daddy Bender, we're hungry.</h3>
 						<p>I just want to talk. It has nothing to do with mating. Fry, that doesn't make sense. Oh sure! Blame the wizards! Calculon is gonna kill us and it's all everybody else's fault! Eeeee! Now say "nuclear wessels"!</p>
 						<p>Bender?! You stole the atom. No! I want to live! There are still too many things I don't own! I just want to talk. It has nothing to do with mating. Fry, that doesn't make sense. <strong> Bender, hurry!</strong> <em> This fuel's expensive!</em> Also, we're dying!</p>
@@ -80,15 +80,15 @@
 							<li>The alien mothership is in orbit here. If we can hit that bullseye, the rest of the dominoes will fall like a house of cards. Checkmate.</li>
 							<li>Yeah, I do that with my stupidness.</li>
 							<li>Bender, you risked your life to save me!</li>
-						</ul>			
-					</div>
-				</div>
-			</div>
-		</main>
-		<footer>
-			<p>Go back to <a href="../">ARIA Intro Assignments</a>.</p>
-			<p>Copyright: Andrew Nordlund 2023</p>
-		</footer>
-		<script src="assignment3.js"></script>
-	</body>
+						</ul>
+            </div>
+        </div>
+    </div>
+</main>
+<footer>
+    <p>Go back to <a href="../">ARIA Intro Assignments</a>.</p>
+    <p>Copyright: Andrew Nordlund 2023</p>
+</footer>
+<script src="assignment3.js"></script>
+</body>
 </html>
