--- a/assignment3/assignment3.html
+++ b/assignment3/assignment3.html
@@ -18,12 +18,12 @@
 
     <div class="tabHolder">
         <ul class="tabList" role="tablist">
-            <li class="selectedTab"><button id="adTabBtn" class="tabBtn" role="tab" aria-selected="true" aria-controls="adTabPanel">Arrested Development</button></li>
-            <li><button id="drWTabBtn" class="tabBtn" role="tab" aria-selected="false" aria-controls="drWTabPanel">Doctor Who</button></li>
-            <li><button id="futuramaTabBtn" class="tabBtn" role="tab" aria-selected="false" aria-controls="futuramaTabPanel">Futurama</button></li>
+            <li class="selectedTab"><button id="adTabBtn" class="tabBtn" role="tab" aria-selected="true" aria-controls="1TabPanel">Arrested Development</button></li>
+            <li><button id="drWTabBtn" class="tabBtn" role="tab" aria-selected="false" aria-controls="2TabPanel">Doctor Who</button></li>
+            <li><button id="futuramaTabBtn" class="tabBtn" role="tab" aria-selected="false" aria-controls="3TabPanel">Futurama</button></li>
         </ul>
         <div class="panels">
-            <div id="adTabPanel" class="tabPanel" role="tabpanel" aria-labelledby="adTabBtn" aria-hidden="false">
+            <div id="1TabPanel" class="tabPanel" role="tabpanel" aria-labelledby="adTabBtn" aria-hidden="false">
                 <h2 id="adh2">Arrested Development Filler</h2>
                 <h3>I'm afraid I just blue myself.</h3>
                 <p>I'm half machine. I'm a monster. Well, what do you expect, mother? What's Spanish for "I know you speak English?" Marry me.</p>
@@ -43,7 +43,7 @@
                     <li>Get me a vodka rocks. And a piece of toast.</li>
                 </ul>
             </div>
-            <div id="drWTabPanel" class="hidden tabPanel" role="tabpanel" aria-labelledby="drWTabBtn" aria-hidden="true">
+            <div id="2TabPanel" class="hidden tabPanel" role="tabpanel" aria-labelledby="drWTabBtn" aria-hidden="true">
                 <h2 id="drwh2">Doctor Who Filler</h2>
                 <h3>They're not aliens, they're Earth…liens!</h3>
                 <p>It's a fez. I wear a fez now. Fezes are cool. I am the Doctor, and you are the Daleks! Stop talking, brain thinking. Hush. You've swallowed a planet! Aw, you're all Mr. Grumpy Face today.</p>
@@ -63,7 +63,7 @@
                     <li>Annihilate? No. No violence. I won't stand for it. Not now, not ever, do you understand me?! I'm the Doctor, the Oncoming Storm - and you basically meant beat them in a football match, didn't you?</li>
                 </ul>
             </div>
-            <div id="futuramaTabPanel" class="hidden tabPanel" role="tabpanel" aria-labelledby="futuramaTabBtn" aria-hidden="true">
+            <div id="3TabPanel" class="hidden tabPanel" role="tabpanel" aria-labelledby="futuramaTabBtn" aria-hidden="true">
                 <h2 id="futh2">Futurama Filler</h2>
                 <h3>Daddy Bender, we're hungry.</h3>
                 <p>I just want to talk. It has nothing to do with mating. Fry, that doesn't make sense. Oh sure! Blame the wizards! Calculon is gonna kill us and it's all everybody else's fault! Eeeee! Now say "nuclear wessels"!</p>
