--- a/assignment3/assignment3.html
+++ b/assignment3/assignment3.html
@@ -18,9 +18,9 @@
 
     <div class="tabHolder">
         <ul class="tabList" role="tablist">
-            <li class="selectedTab"><button id="adTabBtn" class="tabBtn" role="tab" aria-selected="true" aria-controls="1TabPanel">Arrested Development</button></li>
-            <li><button id="drWTabBtn" class="tabBtn" role="tab" aria-selected="false" aria-controls="2TabPanel">Doctor Who</button></li>
-            <li><button id="futuramaTabBtn" class="tabBtn" role="tab" aria-selected="false" aria-controls="3TabPanel">Futurama</button></li>
+            <li class="selectedTab"><button id="1TabBtn" class="tabBtn" role="tab" aria-selected="true" aria-controls="1TabPanel">Arrested Development</button></li>
+            <li><button id="2TabBtn" class="tabBtn" role="tab" aria-selected="false" aria-controls="2TabPanel">Doctor Who</button></li>
+            <li><button id="3TabBtn" class="tabBtn" role="tab" aria-selected="false" aria-controls="3TabPanel">Futurama</button></li>
         </ul>
         <div class="panels">
             <div id="1TabPanel" class="tabPanel" role="tabpanel" aria-labelledby="adTabBtn" aria-hidden="false">
