--- a/assignment3/assignment3.html
+++ b/assignment3/assignment3.html
@@ -17,11 +17,11 @@
     <p>All text here is from <a href="http://fillerama.io/" target="_blank" rel="noopener noreferrer">Fillerama</a>:</p>
 
     <div class="tabHolder">
-        <ul class="tabList" role="tablist">
-            <li class="selectedTab"><button id="1TabBtn" class="tabBtn" role="tab" aria-selected="true" aria-controls="1TabPanel">Arrested Development</button></li>
-            <li><button id="2TabBtn" class="tabBtn" role="tab" aria-selected="false" aria-controls="2TabPanel">Doctor Who</button></li>
-            <li><button id="3TabBtn" class="tabBtn" role="tab" aria-selected="false" aria-controls="3TabPanel">Futurama</button></li>
-        </ul>
+        <div class="tabList" role="tablist">
+            <button id="1TabBtn" class="tabBtn selectedTab" role="tab" aria-selected="true" aria-controls="1TabPanel">Arrested Development</button>
+            <button id="2TabBtn" class="tabBtn" role="tab" aria-selected="false" aria-controls="2TabPanel">Doctor Who</button>
+            <button id="3TabBtn" class="tabBtn" role="tab" aria-selected="false" aria-controls="3TabPanel">Futurama</button>
+        </div>
         <div class="panels">
             <div id="1TabPanel" class="tabPanel" role="tabpanel" aria-labelledby="1TabBtn">
                 <h2 id="adh2">Arrested Development Filler</h2>
